# ZLang

./: CMakeLists.txt  LICENSE  README.md  main.cpp
core/: app.h  booleans.h  contexts.h  core.cpp  core.h  engine.h  exceptions.h  functions.h  headers.h  input.h  numbers.h  objects.h  output.h  parser.h  singletons.h  storage.h  strings.h  types.h  variables.h
